--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="text.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="4_25data.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
