--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -131,6 +131,8 @@
     <ClCompile Include="4_25data.c" />
     <ClCompile Include="5_20data.c" />
     <ClCompile Include="5_21data.c" />
+    <ClCompile Include="5_23data.c" />
+    <ClCompile Include="5_28data.c" />
     <ClCompile Include="text.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
