--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="5_21data.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="5_23data.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5_28data.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
